ud supports asts: update spec.template
